parameter and return value fixes, issue childs response gorm implementation
