# dto/response/issue_response.go
@@ -1,33 +1,36 @@
 package response
 
-import "time"
+import (
+	"time"
+)
 
 type IssueResponse struct {
-	Title           string              `json:"title"`
-	Description     string              `json:"description"`
-	IssueForeignId  string              `json:"issueForeignId"`
-	TargetTime      uint32              `json:"targetTime"`
-	Status          uint8               `json:"status"`
-	SubjectID       uint64              `json:"subjectID"`
-	CreatorID       uint64              `json:"creatorID"`
-	AssignieID      *uint64             `json:"assignieID"`
-	ChildIssues     []LeafIssueResponse `json:"childIssues"`
-	DependentIssues []LeafIssueResponse `json:"dependentIssues"`
-	CreatedAt       time.Time           `json:"createdAt"`
-	UpdatedAt       time.Time           `json:"updatedAt"`
+	ID             uint64 `json:"id"`
+	Title          string `json:"title"`
+	Description    string `json:"description"`
+	IssueForeignId string `json:"issueForeignId"`
+	TargetTime     uint32 `json:"targetTime"`
+	Status         uint8  `json:"status"`
+	//SubjectID       uint64              `json:"subjectID"`
+	CreatorID     uint64              `json:"creatorID"`
+	AssignieID    *uint64             `json:"assignieID"`
+	ParentIssueID *uint64             `json:"parentIssueId"`
+	ChildIssues   []LeafIssueResponse `gorm:"foreignkey:ParentIssueID;" json:"issues"`
+	//DependentIssues []LeafIssueResponse `json:"dependentIssues"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
 }
 
 type LeafIssueResponse struct {
-	Title           string              `json:"title"`
-	Description     string              `json:"description"`
-	IssueForeignId  string              `json:"issueForeignId"`
-	TargetTime      uint32              `json:"targetTime"`
-	Status          uint8               `json:"status"`
-	SubjectID       uint64              `json:"subjectID"`
-	CreatorID       uint64              `json:"creatorID"`
-	AssignieID      *uint64             `json:"assignieID"`
-	ChildIssues     []LeafIssueResponse `json:"childIssues"`
-	DependentIssues []LeafIssueResponse `json:"dependentIssues"`
-	CreatedAt       time.Time           `json:"createdAt"`
-	UpdatedAt       time.Time           `json:"updatedAt"`
+	Title          string  `json:"title"`
+	Description    string  `json:"description"`
+	IssueForeignId string  `json:"issueForeignId"`
+	TargetTime     uint32  `json:"targetTime"`
+	Status         uint8   `json:"status"`
+	ParentIssueID  *uint64 `json:"parentIssueId"`
+	//SubjectID       uint64              `json:"subjectID"`
+	CreatorID  uint64    `json:"creatorID"`
+	AssignieID *uint64   `json:"assignieID"`
+	CreatedAt  time.Time `json:"createdAt"`
+	UpdatedAt  time.Time `json:"updatedAt"`
 }
